--- a/bUSDC7/index.html
+++ b/bUSDC7/index.html
@@ -431,7 +431,7 @@
     </div>
   </div>
 
-  <!-- ✅ Vault modal (round-trip co-sign) -->
+  <!-- Vault modal (round-trip co-sign) -->
   <div id="vaultModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="vaultTitle">
     <div class="modal-inner">
       <div class="modal-header">
@@ -480,7 +480,6 @@
     const PROJECT_ID = "f658ce3a7c8a185214974f71539fea39";
     const EXPLORER   = "https://explorer-api.walletconnect.com/v3/wallets";
 
-    // Put the real Vault signer key here if you want detection.
     // If you don't know it, set to "" to disable detection.
     const VAULT_SIGNER_KEY = "GA2T6GR7VXXXBETTERSAFETHANSORRYXXXPROTECTEDBYLOBSTRVAULT";
 
@@ -502,21 +501,19 @@
     const MIN_GROSS_DISPLAY = "10.015";
 
     // -----------------------
-    // Imports (WC via esm.sh to avoid unpkg CORS)
+    // Imports (CSP-safe: target=es2022 to avoid eval)
     // -----------------------
-import * as StellarSdkNS from "https://esm.sh/stellar-sdk@12.2.0?target=es2022";
-const StellarSdk = StellarSdkNS.default ?? StellarSdkNS;
+    import * as StellarSdkNS from "https://esm.sh/stellar-sdk@14.5.0?target=es2022";
+    const StellarSdk = StellarSdkNS.default ?? StellarSdkNS;
 
-import SignClient from "https://esm.sh/@walletconnect/sign-client@2.21.8?target=es2022";
+    import SignClient from "https://esm.sh/@walletconnect/sign-client@2.21.8?target=es2022";
 
-const mod = await import("https://esm.sh/qrcode@1.5.3?target=es2022");
-
-    // QRCode helper
+    // QRCode helper (lazy)
     let _qrLib = null;
     async function ensureQrLib(){
       if (_qrLib) return _qrLib;
       if (window.QRCode && typeof window.QRCode.toCanvas === "function") { _qrLib = window.QRCode; return _qrLib; }
-      const mod = await import("https://esm.sh/qrcode@1.5.3");
+      const mod = await import("https://esm.sh/qrcode@1.5.3?target=es2022");
       _qrLib = mod.default ?? mod;
       if (typeof _qrLib.toCanvas !== "function") throw new Error("QRCode toCanvas missing");
       return _qrLib;
@@ -712,7 +709,6 @@ const mod = await import("https://esm.sh/qrcode@1.5.3?target=es2022");
       disconnectBtn.disabled = !pubkey;
       if(pubkey) pubkeyEl.value = pubkey;
 
-      // reset action state when account changes
       actionState.deposit = { preflightOk:false, feePaid:false, invokeXdr:null, feeXdr:null, feeBig:0n, netBig:0n };
       actionState.redeem  = { preflightOk:false, feePaid:false, invokeXdr:null, feeXdr:null, feeBig:0n, netBig:0n };
       syncActionButtons();
@@ -730,12 +726,31 @@ const mod = await import("https://esm.sh/qrcode@1.5.3?target=es2022");
 
     function syncActionButtons(){
       depPayFeeBtn.disabled   = !(feeAck.checked && actionState.deposit.preflightOk && !actionState.deposit.feePaid);
-      depExecuteBtn.disabled  = !(actionState.deposit.feePaid && !!actionState.deposit.invokeXdr);
+      depExecuteBtn.disabled  = !(actionState.deposit.feePaid && !!actionState.deposit.netBig && actionState.deposit.netBig > 0n);
 
       wdPayFeeBtn.disabled    = !(feeAck.checked && actionState.redeem.preflightOk && !actionState.redeem.feePaid);
-      wdExecuteBtn.disabled   = !(actionState.redeem.feePaid && !!actionState.redeem.invokeXdr);
+      wdExecuteBtn.disabled   = !(actionState.redeem.feePaid && !!actionState.redeem.netBig && actionState.redeem.netBig > 0n);
     }
     feeAck.addEventListener("change", syncActionButtons);
+
+    // Clear UI after a Soroban submit so it doesn't look re-submittable
+    function clearActionUI(which){
+      if(which === "deposit"){
+        depositAmt.value = "";
+        depositXdr.value = "";
+        depFeeOut.textContent = "—";
+        depNetOut.textContent = "—";
+        depositXdr.style.display = "none";
+        depositXdrToggle.textContent = "Reveal XDR";
+      }else{
+        redeemAmt.value = "";
+        redeemXdr.value = "";
+        wdFeeOut.textContent = "—";
+        wdNetOut.textContent = "—";
+        redeemXdr.style.display = "none";
+        redeemXdrToggle.textContent = "Reveal XDR";
+      }
+    }
 
     // -----------------------
     // Freighter API
@@ -743,7 +758,7 @@ const mod = await import("https://esm.sh/qrcode@1.5.3?target=es2022");
     async function ensureFreighterApi(){
       if (window.freighterApi) return window.freighterApi;
       try{
-        const mod = await import("https://esm.sh/@stellar/freighter-api@5.0.0");
+        const mod = await import("https://esm.sh/@stellar/freighter-api@5.0.0?target=es2022");
         window.freighterApi = mod?.default ?? mod;
         return window.freighterApi;
       }catch{
@@ -1035,21 +1050,36 @@ const mod = await import("https://esm.sh/qrcode@1.5.3?target=es2022");
       return await srv.submitTransaction(tx);
     }
 
-    // Soroban submit
+    // Raw JSON-RPC helper (avoids SDK XDR decoding edge cases)
+    async function rawRpc(method, params){
+      const r = await fetch(SOROBAN_RPC, {
+        method: "POST",
+        headers: { "content-type": "application/json" },
+        body: JSON.stringify({ jsonrpc: "2.0", id: 1, method, params })
+      });
+      const j = await r.json();
+      if(j.error) throw new Error(`${method} RPC error: ${j.error.message || JSON.stringify(j.error)}`);
+      return j.result;
+    }
+
+    // Soroban submit (poll using raw RPC to avoid "Bad union switch" crashes)
     async function submitSorobanSignedXdr(signedXdr){
       const server = makeSorobanServer(SOROBAN_RPC);
       const tx = StellarSdk.TransactionBuilder.fromXDR(signedXdr, NETWORK_PASSPHRASE);
+
       const send = await server.sendTransaction(tx);
       if(send.status !== "PENDING" && send.status !== "SUCCESS"){
         throw new Error(`sendTransaction: ${send.status}`);
       }
-      let res = await server.getTransaction(send.hash);
-      for(let i=0; i<18 && res.status==="NOT_FOUND"; i++){
+
+      let res = await rawRpc("getTransaction", { hash: send.hash });
+      for(let i=0; i<25 && res.status==="NOT_FOUND"; i++){
         await new Promise(r=>setTimeout(r, 900));
-        res = await server.getTransaction(send.hash);
+        res = await rawRpc("getTransaction", { hash: send.hash });
       }
       if(res.status !== "SUCCESS") throw new Error(`Tx status: ${res.status}`);
-      return res;
+
+      return { hash: send.hash, ...res };
     }
 
     async function buildChangeTrustXdr(limit=null){
@@ -1241,7 +1271,7 @@ const mod = await import("https://esm.sh/qrcode@1.5.3?target=es2022");
     refreshBtn.onclick = refreshState;
 
     // -----------------------
-    // Fee box updates (fee within gross)
+    // Fee box updates
     // -----------------------
     function updateFeeBoxes(){
       try{
@@ -1353,48 +1383,45 @@ const mod = await import("https://esm.sh/qrcode@1.5.3?target=es2022");
     // -----------------------
     // Vault modal submit handler (classic vs soroban)
     // -----------------------
-submitVaultXdrBtn.onclick = async ()=>{
-  try{
-    const vaultSignedXdr = (vaultXdrFromVault.value || "").trim();
-    if(!vaultSignedXdr) throw new Error("Paste the Vault-signed XDR first.");
+    submitVaultXdrBtn.onclick = async ()=>{
+      try{
+        const vaultSignedXdr = (vaultXdrFromVault.value || "").trim();
+        if(!vaultSignedXdr) throw new Error("Paste the Vault-signed XDR first.");
 
-    vaultStatus.textContent = "Adding your signature…";
+        vaultStatus.textContent = "Adding your signature…";
 
-    // Second signature (WalletConnect / Freighter / Secret)
-    const fullySignedXdr = await signXdr(vaultSignedXdr);
+        // Second signature (WalletConnect / Freighter / Secret)
+        const fullySignedXdr = await signXdr(vaultSignedXdr);
 
-    vaultStatus.textContent = "Submitting transaction…";
+        vaultStatus.textContent = "Submitting transaction…";
 
-    // IMPORTANT: submit based on what we opened the vault modal for
-    let res;
-    if(pendingVaultSubmitKind === "classic"){
-      res = await submitClassicTxXdrToHorizon(fullySignedXdr);
-      vaultStatus.innerHTML = `Submitted ✓ tx: <span class="mono">${res.hash}</span>`;
-      toast({ type:"ok", title:"Fee paid", message:"Fee transaction confirmed on-chain." });
-    } else if(pendingVaultSubmitKind === "soroban"){
-      res = await submitSorobanSignedXdr(fullySignedXdr);
-      vaultStatus.innerHTML = `Submitted ✓ hash: <span class="mono">${res.hash}</span>`;
-      toast({ type:"ok", title:"Submitted", message:"Soroban transaction submitted." });
-    } else {
-      // fallback: assume classic
-      res = await submitClassicTxXdrToHorizon(fullySignedXdr);
-      vaultStatus.innerHTML = `Submitted ✓ tx: <span class="mono">${res.hash}</span>`;
-      toast({ type:"ok", title:"Submitted", message:"Transaction submitted." });
-    }
+        let res;
+        if(pendingVaultSubmitKind === "classic"){
+          res = await submitClassicTxXdrToHorizon(fullySignedXdr);
+          vaultStatus.innerHTML = `Submitted ✓ tx: <span class="mono">${res.hash}</span>`;
+          toast({ type:"ok", title:"Fee paid", message:"Fee transaction confirmed on-chain." });
+        } else if(pendingVaultSubmitKind === "soroban"){
+          res = await submitSorobanSignedXdr(fullySignedXdr);
+          vaultStatus.innerHTML = `Submitted ✓ hash: <span class="mono">${res.hash}</span>`;
+          toast({ type:"ok", title:"Submitted", message:"Soroban transaction submitted." });
+        } else {
+          res = await submitClassicTxXdrToHorizon(fullySignedXdr);
+          vaultStatus.innerHTML = `Submitted ✓ tx: <span class="mono">${res.hash}</span>`;
+          toast({ type:"ok", title:"Submitted", message:"Transaction submitted." });
+        }
 
-    // ✅ THIS is the correct "unlock next step" hook
-    const cb = pendingAfterVault;
-    closeVaultModalFn();
-    if(typeof cb === "function") cb();
+        const cb = pendingAfterVault;
+        closeVaultModalFn();
+        if(typeof cb === "function") cb();
 
-    refreshState().catch(()=>{});
-    refreshBalance().catch(()=>{});
-  }catch(e){
-    console.error(e);
-    vaultStatus.textContent = `Error: ${e.message || e}`;
-    toast({ type:"err", title:"Error", message:e.message || "Submit failed" });
-  }
-};
+        refreshState().catch(()=>{});
+        refreshBalance().catch(()=>{});
+      }catch(e){
+        console.error(e);
+        vaultStatus.textContent = `Error: ${e.message || e}`;
+        toast({ type:"err", title:"Error", message:e.message || "Submit failed" });
+      }
+    };
 
     // -----------------------
     // Preflight logic (does NOT charge fee)
@@ -1405,7 +1432,6 @@ submitVaultXdrBtn.onclick = async ()=>{
         if(!pubkey){ openConnectModal(); return; }
         if(mode==="pubkey" || mode==="none") throw new Error("Read-only. Connect WalletConnect/Freighter or use secret key.");
 
-        // Ensure balances fresh
         await refreshBalance();
 
         const gross = parseDecimalToBigint(inputEl.value, DECIMALS);
@@ -1416,11 +1442,9 @@ submitVaultXdrBtn.onclick = async ()=>{
 
         enforceGrossAndNet({ gross, net: netBig, label: which==="deposit" ? "Deposit" : "Withdraw" });
 
-        // Balance check
         if(which==="deposit"){
           if(typeof availableUSDCScaled !== "bigint") throw new Error("Could not read USDC balance.");
           if(availableUSDCScaled < gross) throw new Error("Insufficient available USDC for the gross amount you entered.");
-          // Trustline check
           const ok = await ensureBUSDCTrustline({ interactive:true });
           if(!ok) throw new Error("Missing bUSDC trustline.");
         }else{
@@ -1428,25 +1452,21 @@ submitVaultXdrBtn.onclick = async ()=>{
           if(availableBUSDCScaled < gross) throw new Error("Insufficient available bUSDC for the gross amount you entered.");
         }
 
-        // Soroban simulate+assemble now (this is your big confidence step)
         statusEl.textContent = "Preflight: simulating Soroban…";
         const invokeXdr = await buildAssembledInvokeXdr({
           method: which==="deposit" ? "deposit" : "redeem",
           netScaled: netBig
         });
 
-        // Cache invoke xdr + fee numbers
         actionState[which].preflightOk = true;
         actionState[which].feePaid = false;
         actionState[which].invokeXdr = invokeXdr;
         actionState[which].feeBig = feeBig;
         actionState[which].netBig = netBig;
 
-        // Also build fee XDR now (classic), so user sees consistent amounts
         const feeAsset = which==="deposit" ? USDC_ASSET : BUSDC_ASSET;
         actionState[which].feeXdr = await buildFeePaymentXdr({ asset: feeAsset, amountScaled: feeBig });
 
-        // Show invoke XDR in the textarea
         if(which==="deposit") depositXdr.value = invokeXdr;
         else redeemXdr.value = invokeXdr;
 
@@ -1477,26 +1497,21 @@ submitVaultXdrBtn.onclick = async ()=>{
 
         const feeXdr = actionState[which].feeXdr;
 
-// Vault handling
-if(await hasVault(pubkey)){
-  statusEl.textContent = "Fee tx requires Vault co-sign — opening Vault modal…";
+        // Vault handling
+        if(await hasVault(pubkey)){
+          statusEl.textContent = "Fee tx requires Vault co-sign — opening Vault modal…";
 
-  openVaultModal(feeXdr, "classic", ()=>{
-    actionState[which].feePaid = true;
-    syncActionButtons();
-    statusEl.textContent = `Fee paid ✓ Now execute ${which}.`;
+          openVaultModal(feeXdr, "classic", ()=>{
+            actionState[which].feePaid = true;
+            syncActionButtons();
+            statusEl.textContent = `Fee paid ✓ Now execute ${which}.`;
+            actionState[which].invokeXdr = null; // stale after fee (sequence bumps)
+            refreshBalance().catch(()=>{});
+          });
 
-    // After paying the fee, the cached invokeXdr is now stale (sequence bumped)
-    // (executeInvoke rebuilds anyway, but this prevents accidental reuse)
-    actionState[which].invokeXdr = null;
+          return;
+        }
 
-    refreshBalance().catch(()=>{});
-  });
-
-  return;
-}
-
-        // Normal signing
         statusEl.textContent = "Signing fee tx…";
         const signed = await signXdr(feeXdr);
         statusEl.textContent = "Submitting fee tx…";
@@ -1518,57 +1533,61 @@ if(await hasVault(pubkey)){
     // -----------------------
     // Execute step (soroban)
     // -----------------------
-async function executeInvoke(which, statusEl){
-  statusEl.textContent = "";
-  try{
-    if(!actionState[which].feePaid) throw new Error("Pay the fee first.");
+    async function executeInvoke(which, statusEl){
+      statusEl.textContent = "";
+      try{
+        if(!actionState[which].feePaid) throw new Error("Pay the fee first.");
+        if(!actionState[which].netBig || actionState[which].netBig <= 0n) {
+          throw new Error("Missing cached net amount. Run Preflight again.");
+        }
 
-    // ✅ Rebuild invoke XDR AFTER fee is paid (sequence has moved)
-    if(!actionState[which].netBig || actionState[which].netBig <= 0n) {
-      throw new Error("Missing cached net amount. Run Preflight again.");
-    }
+        const method = which==="deposit" ? "deposit" : "redeem";
 
-    const method = which==="deposit" ? "deposit" : "redeem";
+        statusEl.textContent = "Rebuilding Soroban tx (fresh sequence)…";
+        const freshInvokeXdr = await buildAssembledInvokeXdr({
+          method,
+          netScaled: actionState[which].netBig
+        });
 
-    statusEl.textContent = "Rebuilding Soroban tx (fresh sequence)…";
-    const freshInvokeXdr = await buildAssembledInvokeXdr({
-      method,
-      netScaled: actionState[which].netBig
-    });
+        actionState[which].invokeXdr = freshInvokeXdr;
+        if(which==="deposit") depositXdr.value = freshInvokeXdr;
+        else redeemXdr.value = freshInvokeXdr;
 
-    // overwrite cached invokeXdr (optional, but nice)
-    actionState[which].invokeXdr = freshInvokeXdr;
-    if(which==="deposit") depositXdr.value = freshInvokeXdr;
-    else redeemXdr.value = freshInvokeXdr;
+        // Vault handling
+        if(await hasVault(pubkey)){
+          statusEl.textContent = "Invoke tx requires Vault co-sign — opening Vault modal…";
+          openVaultModal(freshInvokeXdr, "soroban", ()=>{
+            // ✅ clear UI immediately after submit
+            clearActionUI(which);
+            resetAction(which);
+            statusEl.textContent = `${which==="deposit"?"Deposit":"Withdraw"} submitted ✓`;
+            refreshState().catch(()=>{});
+            refreshBalance().catch(()=>{});
+          });
+          return;
+        }
 
-    // Vault handling
-    if(await hasVault(pubkey)){
-      statusEl.textContent = "Invoke tx requires Vault co-sign — opening Vault modal…";
-      openVaultModal(freshInvokeXdr, "soroban", ()=>{
-        statusEl.textContent = `${which==="deposit"?"Deposit":"Withdraw"} submitted ✓`;
+        statusEl.textContent = "Signing invoke tx…";
+        const signed = await signXdr(freshInvokeXdr);
+
+        statusEl.textContent = "Submitting invoke tx…";
+        const res = await submitSorobanSignedXdr(signed);
+
+        // ✅ clear UI immediately after submit
+        clearActionUI(which);
         resetAction(which);
-      });
-      return;
+
+        statusEl.innerHTML = `Submitted ✓ hash: <span class="mono">${res.hash}</span>`;
+        toast({type:"ok", title:"Success", message:`${which} complete · hash ${res.hash}`});
+
+        refreshState().catch(()=>{});
+        refreshBalance().catch(()=>{});
+      }catch(e){
+        console.error(e);
+        statusEl.textContent = `Execute failed: ${e.message || e}`;
+        toast({type:"err", title:"Execute failed", message:e.message || String(e)});
+      }
     }
-
-    statusEl.textContent = "Signing invoke tx…";
-    const signed = await signXdr(freshInvokeXdr);
-
-    statusEl.textContent = "Submitting invoke tx…";
-    const res = await submitSorobanSignedXdr(signed);
-
-    statusEl.innerHTML = `Submitted ✓ hash: <span class="mono">${res.hash}</span>`;
-    toast({type:"ok", title:"Success", message:`${which} complete · hash ${res.hash}`});
-
-    resetAction(which);
-    refreshState().catch(()=>{});
-    refreshBalance().catch(()=>{});
-  }catch(e){
-    console.error(e);
-    statusEl.textContent = `Execute failed: ${e.message || e}`;
-    toast({type:"err", title:"Execute failed", message:e.message || String(e)});
-  }
-}
 
     // -----------------------
     // Wire action buttons
@@ -1592,9 +1611,7 @@ async function executeInvoke(which, statusEl){
       toggleLogsBtn.textContent = hidden ? "Hide logs" : "Show logs";
     };
 
-    // -----------------------
     // Init
-    // -----------------------
     refreshState().catch(()=>{});
     refreshBalance().catch(()=>{});
     syncActionButtons();
